--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="about-text">
-            <h2>Welcome to TechEduca. <br> Enhance your skills with the best Online Courses</h2>
+            <h2>Welcome to BSNLearn. <br> Enhance your skills with the best Online Courses</h2>
             <p>Many of these popular courses can be completed in under a day! Browse the list of free and paid courses
                 below to choose which suits your needs.</p>
             <div class="about-fe">
