--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
 <body>
     <nav>
-        <img src="images/logo.png" alt="">
+        <img src="images/logo1.png" alt="">
         <div class="navigation">
             <ul>
                 <i class="fas fa-times" id="menu-close"></i>
