--- a/about.html
+++ b/about.html
@@ -144,9 +144,10 @@
             <div class="copyright">
                 <p>Copyright ©2021 All rights reserved | This template is made by Naidu Basudev</p>
                 <div class="pro-links">
-                    <i class="fab fa-facebook-f"></i>
+                   <a href="https://github.com/BasudevNaidu"><i class="fa-brands fa-github"></i</a>
                     <i class="fab fa-instagram"></i>
-                    <i class="fab fa-linkedin-in"></i>
+                    <a href="https://www.linkedin.com/in/naidu-basudev-96b7a6289/">  <i class="fab fa-linkedin-in"></i> </a>
+                   
                 </div>
             </div>
     </footer>
